# inlive-python-sdk

./: .env.example  .gitignore  README.md  pyproject.toml
src/inlive_python_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/logger/: logger.py
src/recorder/: manager.py  media.py  recorder.py
src/rtc/: __init__.py  api.py  rtc.py
src/threadpool/: threadpool.py
tests/: conftest.py  test_recorder.py  test_rtc.py
